<resources>
    <string name="app_name">FootballClub</string>

    <string name="sign_in">Войти</string>
    <string name="continue_action">Продолжить</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="authorization">Авторизация</string>

    <string name="home_message">Авторизируйтесь</string>
    <string name="home_message_2">или пройдите регистрацию.</string>

    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="e_mail">Адрес электронной почты</string>
    <string name="remember_me">Запомнить меня.</string>
    <string name="forget_password">Забыли пароль?</string>

    <string name="accounts">Аккаунты</string>
    <string name="about_app">Справка</string>
    <string name="players">Игроки</string>
    <string name="add_account">Добавить</string>

    <string name="incorrect_message">Неверный логин или пароль.\nПовторите попытку!</string>
    <string name="empty_reg_lines">Заполните все требуемые поля</string>
    <string name="passwords_reg_error">Пароли не совпадают!</string>
    <string name="account_exist_error">Имя аккаунта уже занято!</string>
    <string name="reg_information">Email адрес и пароль</string>
    <string name="reg_information_2">Убедитесь, что вводите корректный email адрес\nи надёжный пароль.</string>

    <string name="search">Поиск</string>

    <string name="own_about">О себе (необязательно)</string>
    <string name="own_about_information">Расскажите о себе</string>
    <string name="own_select_pos">и выберите позицию на поле.</string>
    <string name="age">Укажите дату рождения</string>

    <string name="select_item">Выберите позицию на поле</string>

    <string-array name="positions">
        <item>Нападающий</item>
        <item>Защитник</item>
        <item>Полузащитник</item>
        <item>Вратарь</item>
    </string-array>

    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="hello_blank_fragment">ауе</string>
    <string name="or">или</string>
    <string name="reg_date">Дата регистрации</string>
    <string name="save_changes">Сохранить</string>
    <string name="cancel_changes">Отмена</string>
    <string name="ban">Заблокировать</string>
    <string name="add_new_account">Добавление нового аккаунта</string>
    <string name="account_add_message">В вспылвающем диалоговом окне выберите варинат добавления.</string>
    <string name="full_account">Подробное добавление</string>
    <string name="half_account">Частичное добавление</string>
    <string name="add">Добавить аккаунт</string>
    <string name="add_inf_msg">Добавьте информацию о пользователе</string>
    <string name="delete_message">Вы точно хотите удалить аккаунт?\nТакже удалятся данные игрока.</string>
    <string name="delete_title">Удаление аккаунта</string>
    <string name="full_information">Читать полностью…</string>
    <string name="remove">Удалить</string>
    <string name="download_photo">Загрузить фотографию</string>
    <string name="account_data">Данные аккаунта</string>
    <string name="email_change">Нажмите, чтобы изменить email адрес</string>
    <string name="change_phone">Нажмите, чтобы изменить номер телефона</string>
    <string name="player_data">Данные игрока</string>
    <string name="birth_day">Дата рождения</string>
    <string name="position">Позиция на поле</string>
    <string name="about_player">Об игроке</string>
    <string name="edit">Редактировать</string>
    <string name="edit_inf_message_2">Здесь можно изменить данные игрока и его аккаунта.</string>
    <string name="edit_inf_message_1">Редактирование сведений</string>
    <string name="edit_birthday">Изенить дату рождения</string>
    <string name="player_questionnaire">Анкета игрока</string>
    <string name="yes">Да</string>
    <string name="edit_title">Внесение изменений</string>
    <string name="edit_message">Применить изменения?</string>
    <string name="sigh_out_title">Выход</string>
    <string name="sign_out_message">Вы уверены, что хотите выйти?</string>
    <string name="sign_out">Выйти</string>
    <string name="fc_name">ФК \"Химик\"</string>

    <string name="admin_inf">Главный тренер команды, начал карьеру футболиста в марсельском «Олимпике». В роли главного тренера команды выступает с 1900 года.</string>
    <string name="set_birthday">Указать дату рождения</string>
    <string name="apply">Подтвердить</string>
    <string name="first_name_nec">Имя*</string>
    <string name="last_name_nec">Фамилия*</string>
    <string name="phone_number_nec">Номер телефона*</string>
    <string name="player_info">Информация об игроке</string>
    <string name="edit_page_title">Редактирование данных аккаунта</string>
    <string name="edit_birhday">Редактировать дату рождения</string>
    <string name="profile">Профиль</string>

</resources>