<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.players.PlayerEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/to_player_page_from_edit_page"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cancel"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/edit_inf_message_1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/edit_inf_message_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="@string/player_data"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="bottom"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/player_first_name"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="bottom"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/player_last_name"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/edit_birth_date"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/edit_birthday"
                    android:textColor="@color/background_about_app"
                    android:textSize="16sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/account_data"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="bottom"
                    android:text="@string/e_mail" />

                <EditText
                    android:id="@+id/player_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="bottom"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/player_phone_number"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/save_changes_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/save_changes"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/about_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>