<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.registration.InformationFragment">

    <EditText
        android:id="@+id/add_own_about"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="200dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/own_about"
        android:maxLines="10"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_first_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/add_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_last_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/add_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/add_phone_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/add_own_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/select_item"
        app:layout_constraintBottom_toTopOf="@+id/add_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/add_spinner"
        android:layout_width="340dp"
        android:layout_height="37dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:entries="@array/positions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_own_about" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_add_age_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/background_about_app"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:src="@drawable/ic_baseline_navigate_next_24"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/add_inf_text_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start"
        android:text="@string/add_inf_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_own_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/add_select_pos_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/own_select_pos"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_inf_text_fragment"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/to_main_add_page_from_add_inf_page"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_back"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>