<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.CustomDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save_changes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save_changes"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="end">

            <FrameLayout
                android:id="@+id/negative"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel_changes" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/positive"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/yes" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>